# afor-ocr

./: .gitignore  LICENSE  README.md  makefile  requirements.txt  setup.cfg  setup.py
demo/: demo.py  hooks.py  images.py  main.py  types.py  viz.py
ocr/: io.py  tesseract.py  transforms.py  types.py
ocr/preprocessing/: functionals.py
tests/: test_detection.py
