# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = afor-ocr
project_urls =
    Source code = https://github.com/giobber/afor-ocr
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
zip_safe = False
include_package_data = True
python_requires = ==3.8.*
install_requires =
    numpy~=1.19.2
    pytesseract
    opencv-python-headless
    imutils
scripts =

[options.packages.find]
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install api[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
demo =
    holoviews>=1.13.3
    datashader
    bokeh>=2.2.1
    panel>=0.9.7
    param
testing =
    pytest
develop =
    black
    flake8
    isort
    pip
    setuptools
    typing-extensions

[aliases]
build = bdist_wheel
release = build upload

#[bdist_wheel]
# Use this option if your package is pure-python
#universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-line-length=80
ignore=E203,W503,E302

[isort]
line_length=80
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
use_parentheses=True
